--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -5,7 +5,9 @@
         <div class="row">
           <div class="col-lg-12">
             <div class="row" id="page-contents">
-              <%= render "sidebars/sidebar-1" %>
+              <div class="col-lg-3">
+                <%= render "sidebars/sidebar-1" %>
+              </div>
               <div class="col-lg-6">
                 <div class="central-meta">
                   <div class="new-postbox">
