--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -389,10 +389,8 @@
       </li>
       <li><a href="#" title="Languages" data-ripple=""><i class="fa fa-globe"></i></a>
         <div class="dropdowns languages">
-          <a href="#" title=""><i class="ti-check"></i>English</a>
-          <a href="#" title="">Arabic</a>
-          <a href="#" title="">Dutch</a>
-          <a href="#" title="">French</a>
+          <%= link_to t("button.english"), locale:"en" %>
+          <%= link_to t("button.vietnam"), locale:"vi" %>
         </div>
       </li>
     </ul>
