--- a/app/views/posts/update.js.erb
+++ b/app/views/posts/update.js.erb
@@ -1,1 +1,2 @@
-$('#myModaledit').modal('hide');
+$("#myModaledit").modal("hide");
+$("#post").prepend("<%= j(render('posts/post_user', post: @post))%>")
