--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -5,16 +5,15 @@
         <div class="widget">
           <div class="foot-logo">
             <div class="logo">
-              <a href="index.html" title=""><img src="images/logo.png" alt=""></a>
+              <a href="index.html" title=""><%= image_tag "logo.png" %></a>
             </div>
-            <p>
-              The trio took this simple idea and built it into the world’s leading carpooling platform.
+            <p><%= I18n.t ".We_took_this_simple_idea_and_built_it_into_the_world_is_leading_travel_review_platform" %>
             </p>
           </div>
           <ul class="location">
             <li>
               <i class="ti-map-alt"></i>
-              <p>33 new montgomery st.750 san francisco, CA USA 94105.</p>
+              <p>Hoang Quoc Viet Street - Cau Giay District - Ha Noi City - Viet Nam</p>
             </li>
             <li>
               <i class="ti-mobile"></i>
@@ -25,7 +24,7 @@
       </div>
       <div class="col-lg-2 col-md-4">
         <div class="widget">
-          <div class="widget-title"><h4>follow</h4></div>
+          <div class="widget-title"><h4><%= I18n.t ".Follow" %></h4></div>
           <ul class="list-style">
             <li><i class="fa fa-facebook-square"></i> <a href="https://web.facebook.com/shopcircut/" title="">facebook</a></li>
             <li><i class="fa fa-twitter-square"></i><a href="https://twitter.com/login?lang=en" title="">twitter</a></li>
@@ -37,31 +36,28 @@
       </div>
       <div class="col-lg-2 col-md-4">
         <div class="widget">
-          <div class="widget-title"><h4>Navigate</h4></div>
+          <div class="widget-title"><h4><%= I18n.t ".Navigate" %></h4></div>
           <ul class="list-style">
             <li><a href="about.html" title="">about us</a></li>
             <li><a href="contact.html" title="">contact us</a></li>
             <li><a href="terms.html" title="">terms & Conditions</a></li>
-            <li><a href="#" title="">RSS syndication</a></li>
             <li><a href="sitemap.html" title="">Sitemap</a></li>
           </ul>
         </div>
       </div>
       <div class="col-lg-2 col-md-4">
         <div class="widget">
-          <div class="widget-title"><h4>useful links</h4></div>
+          <div class="widget-title"><h4><%= I18n.t ".Userful_link" %></h4></div>
           <ul class="list-style">
             <li><a href="#" title="">leasing</a></li>
-            <li><a href="#" title="">submit route</a></li>
             <li><a href="#" title="">how does it work?</a></li>
-            <li><a href="#" title="">agent listings</a></li>
-            <li><a href="#" title="">view All</a></li>
           </ul>
         </div>
       </div>
       <div class="col-lg-2 col-md-4">
         <div class="widget">
           <div class="widget-title"><h4><%= t("text.language") %></h4></div>
+          <div class="widget-title"><h4><%= I18n.t ".DOWNLOAD_APPS" %></h4></div>
           <ul class="colla-apps">
             <li><%= link_to t("button.english"), locale:"en" %></li>
             <li><%= link_to t("button.vietnam"), locale:"vi" %></li>
@@ -70,15 +66,4 @@
       </div>
     </div>
   </div>
-</footer><!-- footer -->
-<!-- <div class="bottombar">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <span class="copyright">© Winku 2018. All rights reserved.</span>
-        <i><img src="images/credit-cards.png" alt=""></i>
-      </div>
-    </div>
-  </div>
-</div>
- -->
+</footer>
