--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -11,10 +11,10 @@
  * It is generally better to create a new file per style scope.
  *
  *= require_tree ./lib
- *= require_tree .
  *= require_self
  *= require themify-icons
  *= require font-awesome
  */
 @import "themify-icons";
+@import "font-awesome";
 @import "bootstrap";
