--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,7 +4,7 @@
       <a class="" href="#menu"><i class="fa fa-align-justify"></i></a>
     </span>
     <span class="mh-text">
-      <a href="newsfeed.html" title=""><img src="images/logo2.png" alt=""></a>
+      <a href="newsfeed.html" title=""><%= image_tag "logo2.png" %></a>
     </span>
     <span class="mh-btns-right">
       <a class="fa fa-sliders" href="#shoppingbag"></a>
@@ -18,58 +18,30 @@
   </div>
   <nav id="menu" class="res-menu">
     <ul>
-      <li><span>Home</span>
+      <li><span><%= I18n.t ".home" %></span>
         <ul>
           <li><a href="index.html" title="">Home Social</a></li>
           <li><a href="index2.html" title="">Home Social 2</a></li>
           <li><a href="index-company.html" title="">Home Company</a></li>
-          <li><a href="landing.html" title="">Login page</a></li>
-          <li><a href="logout.html" title="">Logout Page</a></li>
-          <li><a href="newsfeed.html" title="">news feed</a></li>
         </ul>
       </li>
-      <li><span>Time Line</span>
+      <li><span><%= I18n.t ".Timeline" %></span>
         <ul>
           <li><a href="time-line.html" title="">timeline</a></li>
           <li><a href="timeline-friends.html" title="">timeline friends</a></li>
-          <li><a href="timeline-groups.html" title="">timeline groups</a></li>
           <li><a href="timeline-pages.html" title="">timeline pages</a></li>
-          <li><a href="timeline-photos.html" title="">timeline photos</a></li>
-          <li><a href="timeline-videos.html" title="">timeline videos</a></li>
           <li><a href="fav-page.html" title="">favourit page</a></li>
-          <li><a href="groups.html" title="">groups page</a></li>
           <li><a href="page-likers.html" title="">Likes page</a></li>
-          <li><a href="people-nearby.html" title="">people nearby</a></li>
         </ul>
       </li>
-      <li><span>Account Setting</span>
+      <li><span><%= I18n.t ".Account_Settings"  %></span>
         <ul>
           <li><a href="create-fav-page.html" title="">create fav page</a></li>
           <li><a href="edit-account-setting.html" title="">edit account setting</a></li>
-          <li><a href="edit-interest.html" title="">edit-interest</a></li>
           <li><a href="edit-password.html" title="">edit-password</a></li>
           <li><a href="edit-profile-basic.html" title="">edit profile basics</a></li>
-          <li><a href="edit-work-eductation.html" title="">edit work educations</a></li>
-          <li><a href="messages.html" title="">message box</a></li>
           <li><a href="inbox.html" title="">Inbox</a></li>
           <li><a href="notifications.html" title="">notifications page</a></li>
-        </ul>
-      </li>
-      <li><span>forum</span>
-        <ul>
-          <li><a href="forum.html" title="">Forum Page</a></li>
-          <li><a href="forums-category.html" title="">Fourm Category</a></li>
-          <li><a href="forum-open-topic.html" title="">Forum Open Topic</a></li>
-          <li><a href="forum-create-topic.html" title="">Forum Create Topic</a></li>
-        </ul>
-      </li>
-      <li><span>Our Shop</span>
-        <ul>
-          <li><a href="shop.html" title="">Shop Products</a></li>
-          <li><a href="shop-masonry.html" title="">Shop Masonry Products</a></li>
-          <li><a href="shop-single.html" title="">Shop Detail Page</a></li>
-          <li><a href="shop-cart.html" title="">Shop Product Cart</a></li>
-          <li><a href="shop-checkout.html" title="">Product Checkout</a></li>
         </ul>
       </li>
       <li><span>Our Blog</span>
@@ -84,330 +56,94 @@
           <li><a href="blog-detail.html" title="">Blog Post Detail</a></li>
         </ul>
       </li>
-      <li><span>Portfolio</span>
-        <ul>
-          <li><a href="portfolio-2colm.html" title="">Portfolio 2col</a></li>
-          <li><a href="portfolio-3colm.html" title="">Portfolio 3col</a></li>
-          <li><a href="portfolio-4colm.html" title="">Portfolio 4col</a></li>
-        </ul>
-      </li>
-      <li><span>Support & Help</span>
-        <ul>
-          <li><a href="support-and-help.html" title="">Support & Help</a></li>
-          <li><a href="support-and-help-detail.html" title="">Support & Help Detail</a></li>
-          <li><a href="support-and-help-search-result.html" title="">Support & Help Search Result</a></li>
-        </ul>
-      </li>
       <li><span>More pages</span>
         <ul>
           <li><a href="careers.html" title="">Careers</a></li>
           <li><a href="career-detail.html" title="">Career Detail</a></li>
           <li><a href="404.html" title="">404 error page</a></li>
           <li><a href="404-2.html" title="">404 Style2</a></li>
-          <li><a href="faq.html" title="">faq's page</a></li>
-          <li><a href="insights.html" title="">insights</a></li>
-          <li><a href="knowledge-base.html" title="">knowledge base</a></li>
         </ul>
       </li>
       <li><a href="about.html" title="">about</a></li>
-      <li><a href="about-company.html" title="">About Us2</a></li>
-      <li><a href="contact.html" title="">contact</a></li>
       <li><a href="contact-branches.html" title="">Contact Us2</a></li>
-      <li><a href="widgets.html" title="">Widgts</a></li>
     </ul>
-  </nav>
-  <nav id="shoppingbag">
-    <div>
-      <div class="">
-        <form method="post">
-          <div class="setting-row">
-            <span>use night mode</span>
-            <input type="checkbox" id="nightmode"/>
-            <label for="nightmode" data-on-label="ON" data-off-label="OFF"></label>
-          </div>
-          <div class="setting-row">
-            <span>Notifications</span>
-            <input type="checkbox" id="switch2"/>
-            <label for="switch2" data-on-label="ON" data-off-label="OFF"></label>
-          </div>
-          <div class="setting-row">
-            <span>Notification sound</span>
-            <input type="checkbox" id="switch3"/>
-            <label for="switch3" data-on-label="ON" data-off-label="OFF"></label>
-          </div>
-          <div class="setting-row">
-            <span>My profile</span>
-            <input type="checkbox" id="switch4"/>
-            <label for="switch4" data-on-label="ON" data-off-label="OFF"></label>
-          </div>
-          <div class="setting-row">
-            <span>Show profile</span>
-            <input type="checkbox" id="switch5"/>
-            <label for="switch5" data-on-label="ON" data-off-label="OFF"></label>
-          </div>
-        </form>
-        <h4 class="panel-title">Account Setting</h4>
-        <form method="post">
-          <div class="setting-row">
-            <span>Sub users</span>
-            <input type="checkbox" id="switch6" />
-            <label for="switch6" data-on-label="ON" data-off-label="OFF"></label>
-          </div>
-          <div class="setting-row">
-            <span>personal account</span>
-            <input type="checkbox" id="switch7" />
-            <label for="switch7" data-on-label="ON" data-off-label="OFF"></label>
-          </div>
-          <div class="setting-row">
-            <span>Business account</span>
-            <input type="checkbox" id="switch8" />
-            <label for="switch8" data-on-label="ON" data-off-label="OFF"></label>
-          </div>
-          <div class="setting-row">
-            <span>Show me online</span>
-            <input type="checkbox" id="switch9" />
-            <label for="switch9" data-on-label="ON" data-off-label="OFF"></label>
-          </div>
-          <div class="setting-row">
-            <span>Delete history</span>
-            <input type="checkbox" id="switch10" />
-            <label for="switch10" data-on-label="ON" data-off-label="OFF"></label>
-          </div>
-          <div class="setting-row">
-            <span>Expose author name</span>
-            <input type="checkbox" id="switch11" />
-            <label for="switch11" data-on-label="ON" data-off-label="OFF"></label>
-          </div>
-        </form>
-      </div>
-    </div>
   </nav>
 </div>
 <div class="topbar stick">
   <div class="logo">
-    <!-- <a title="" href="newsfeed.html"><img src="images/logo.png" alt=""></a> -->
     <%= link_to root_url do %>
       <%= image_tag "logo.png", alt:"logo"%>
     <% end  %>
   </div>
-
   <div class="top-area">
     <ul class="main-menu">
       <li>
-        <a href="#" title="">Home</a>
+        <a href="#" title=""><%= I18n.t ".Home" %></a>
         <ul>
           <li><a href="index.html" title="">Home Social</a></li>
           <li><a href="index2.html" title="">Home Social 2</a></li>
           <li><a href="index-company.html" title="">Home Company</a></li>
-          <li><a href="landing.html" title="">Login page</a></li>
-          <li><a href="logout.html" title="">Logout Page</a></li>
-          <li><a href="newsfeed.html" title="">news feed</a></li>
         </ul>
       </li>
       <li>
-        <a href="#" title="">timeline</a>
+        <a href="#" title=""><%= I18n.t ".Timeline" %></a>
         <ul>
           <li><a href="time-line.html" title="">timeline</a></li>
           <li><a href="timeline-friends.html" title="">timeline friends</a></li>
-          <li><a href="timeline-groups.html" title="">timeline groups</a></li>
           <li><a href="timeline-pages.html" title="">timeline pages</a></li>
-          <li><a href="timeline-photos.html" title="">timeline photos</a></li>
-          <li><a href="timeline-videos.html" title="">timeline videos</a></li>
           <li><a href="fav-page.html" title="">favourit page</a></li>
           <li><a href="groups.html" title="">groups page</a></li>
           <li><a href="page-likers.html" title="">Likes page</a></li>
-          <li><a href="people-nearby.html" title="">people nearby</a></li>
         </ul>
       </li>
       <li>
-        <a href="#" title="">account settings</a>
-        <ul>
-          <li><a href="create-fav-page.html" title="">create fav page</a></li>
-          <li><a href="edit-account-setting.html" title="">edit account setting</a></li>
-          <li><a href="edit-interest.html" title="">edit-interest</a></li>
-          <li><a href="edit-password.html" title="">edit-password</a></li>
-          <li><a href="edit-profile-basic.html" title="">edit profile basics</a></li>
-          <li><a href="edit-work-eductation.html" title="">edit work educations</a></li>
-          <li><a href="messages.html" title="">message box</a></li>
-          <li><a href="inbox.html" title="">Inbox</a></li>
-          <li><a href="notifications.html" title="">notifications page</a></li>
-        </ul>
-      </li>
-      <li>
-        <a href="#" title="">more pages</a>
+        <a href="#" title=""><%= I18n.t ".More_Pages"  %></a>
         <ul>
           <li><a href="404.html" title="">404 error page</a></li>
           <li><a href="about.html" title="">about</a></li>
           <li><a href="contact.html" title="">contact</a></li>
-          <li><a href="faq.html" title="">faq's page</a></li>
-          <li><a href="insights.html" title="">insights</a></li>
-          <li><a href="knowledge-base.html" title="">knowledge base</a></li>
-          <li><a href="widgets.html" title="">Widgts</a></li>
+          <li><%= link_to "English", locale:"en" %>
+          </li>
+          <li><%= link_to "Vietnamese", locale:"vi"%>
+          </li>
         </ul>
       </li>
-    </ul>
-    <ul class="setting-area">
-      <li>
-        <a href="" title="Home" data-ripple=""><i class="ti-search"></i></a>
-        <div class="searched">
-          <form method="post" class="form-search">
-            <input type="text" placeholder="Search Friend">
-            <button data-ripple><i class="ti-search"></i></button>
-          </form>
-        </div>
-      </li>
-      <li><a href="newsfeed.html" title="Home" data-ripple=""><i class="ti-home"></i></a></li>
-      <li>
-        <a href="#" title="Notification" data-ripple="">
-          <i class="ti-bell"></i><span>20</span>
-        </a>
-        <div class="dropdowns">
-          <span>4 New Notifications</span>
-          <ul class="drops-menu">
-            <li>
-              <a href="notifications.html" title="">
-                <img src="images/resources/thumb-1.jpg" alt="">
-                <div class="mesg-meta">
-                  <h6>sarah Loren</h6>
-                  <span>Hi, how r u dear ...?</span>
-                  <i>2 min ago</i>
-                </div>
-              </a>
-              <span class="tag green">New</span>
+      <% if user_signed_in? %>
+        <li>
+            <%= image_tag current_user.avatar.url || "default_avatar.png" %>
+            <%= current_user.name %>
+          <ul>
+            <li><%=link_to user_path(current_user) do %>
+            <i class="ti-user"></i>
+              <%= I18n.t ".view_profile" %>
+            <% end %>
             </li>
-            <li>
-              <a href="notifications.html" title="">
-                <img src="images/resources/thumb-2.jpg" alt="">
-                <div class="mesg-meta">
-                  <h6>Jhon doe</h6>
-                  <span>Hi, how r u dear ...?</span>
-                  <i>2 min ago</i>
-                </div>
-              </a>
-              <span class="tag red">Reply</span>
+            <li><%= link_to edit_user_path(current_user) do %>
+              <i class="ti-pencil-alt"></i>
+                <%= I18n.t ".edit_profile" %>
+              <% end %>
             </li>
-            <li>
-              <a href="notifications.html" title="">
-                <img src="images/resources/thumb-3.jpg" alt="">
-                <div class="mesg-meta">
-                  <h6>Andrew</h6>
-                  <span>Hi, how r u dear ...?</span>
-                  <i>2 min ago</i>
-                </div>
-              </a>
-              <span class="tag blue">Unseen</span>
+            <li><%= link_to edit_user_registration_path do %>
+              <i class="ti-settings"></i>
+                <%= (I18n.t ".Edit_Password") %>
+              <% end %>
             </li>
-            <li>
-              <a href="notifications.html" title="">
-                <img src="images/resources/thumb-4.jpg" alt="">
-                <div class="mesg-meta">
-                  <h6>Tom cruse</h6>
-                  <span>Hi, how r u dear ...?</span>
-                  <i>2 min ago</i>
-                </div>
-              </a>
-              <span class="tag">New</span>
-            </li>
-            <li>
-              <a href="notifications.html" title="">
-                <img src="images/resources/thumb-5.jpg" alt="">
-                <div class="mesg-meta">
-                  <h6>Amy</h6>
-                  <span>Hi, how r u dear ...?</span>
-                  <i>2 min ago</i>
-                </div>
-              </a>
-              <span class="tag">New</span>
-            </li>
-          </ul>
-          <a href="notifications.html" title="" class="more-mesg">view more</a>
-        </div>
-      </li>
-      <li>
-        <a href="#" title="Messages" data-ripple=""><i class="ti-comment"></i><span>12</span></a>
-        <div class="dropdowns">
-          <span>5 New Messages</span>
-          <ul class="drops-menu">
-            <li>
-              <a href="notifications.html" title="">
-                <img src="images/resources/thumb-1.jpg" alt="">
-                <div class="mesg-meta">
-                  <h6>sarah Loren</h6>
-                  <span>Hi, how r u dear ...?</span>
-                  <i>2 min ago</i>
-                </div>
-              </a>
-              <span class="tag green">New</span>
-            </li>
-            <li>
-              <a href="notifications.html" title="">
-                <img src="images/resources/thumb-2.jpg" alt="">
-                <div class="mesg-meta">
-                  <h6>Jhon doe</h6>
-                  <span>Hi, how r u dear ...?</span>
-                  <i>2 min ago</i>
-                </div>
-              </a>
-              <span class="tag red">Reply</span>
-            </li>
-            <li>
-              <a href="notifications.html" title="">
-                <img src="images/resources/thumb-3.jpg" alt="">
-                <div class="mesg-meta">
-                  <h6>Andrew</h6>
-                  <span>Hi, how r u dear ...?</span>
-                  <i>2 min ago</i>
-                </div>
-              </a>
-              <span class="tag blue">Unseen</span>
-            </li>
-            <li>
-              <a href="notifications.html" title="">
-                <img src="images/resources/thumb-4.jpg" alt="">
-                <div class="mesg-meta">
-                  <h6>Tom cruse</h6>
-                  <span>Hi, how r u dear ...?</span>
-                  <i>2 min ago</i>
-                </div>
-              </a>
-              <span class="tag">New</span>
-            </li>
-            <li>
-              <a href="notifications.html" title="">
-                <img src="images/resources/thumb-5.jpg" alt="">
-                <div class="mesg-meta">
-                  <h6>Amy</h6>
-                  <span>Hi, how r u dear ...?</span>
-                  <i>2 min ago</i>
-                </div>
-              </a>
-              <span class="tag">New</span>
+            <li><%= link_to destroy_user_session_path,
+              data: { confirm: "Sure ?" }, method: :delete do %>
+              <i class="ti-power-off"></i>
+                <%= I18n.t ".Log_Out" %>
+              <% end %>
             </li>
           </ul>
           <a href="messages.html" title="" class="more-mesg">view more</a>
         </div>
       </li>
-      <li><a href="#" title="Languages" data-ripple=""><i class="fa fa-globe"></i></a>
-        <div class="dropdowns languages">
-          <%= link_to t("button.english"), locale:"en" %>
-          <%= link_to t("button.vietnam"), locale:"vi" %>
-        </div>
-      </li>
+      <% else %>
+        <%= link_to new_user_session_path do %>
+        <i class="ti-crown"></i>
+        <%= I18n.t ".Login" %>
+        <% end %>
+      <% end %>
     </ul>
-    <div class="user-img">
-      <img src="images/resources/admin.jpg" alt="">
-      <span class="status f-online"></span>
-      <div class="user-setting">
-        <a href="#" title=""><span class="status f-online"></span>online</a>
-        <a href="#" title=""><span class="status f-away"></span>away</a>
-        <a href="#" title=""><span class="status f-off"></span>offline</a>
-        <a href="#" title=""><i class="ti-user"></i> view profile</a>
-        <a href="#" title=""><i class="ti-pencil-alt"></i>edit profile</a>
-        <a href="#" title=""><i class="ti-target"></i>activity log</a>
-        <a href="#" title=""><i class="ti-settings"></i>account setting</a>
-        <a href="#" title=""><i class="ti-power-off"></i>log out</a>
-      </div>
-    </div>
-    <span class="ti-menu main-menu" data-ripple=""></span>
   </div>
-</div><!-- topbar --><!-- responsive header -->
+</div>
