--- a/app/views/sidebars/_sidebar-1.html.erb
+++ b/app/views/sidebars/_sidebar-1.html.erb
@@ -1,50 +1,26 @@
 <aside class="sidebar static">
   <div class="widget">
-    <h4 class="widget-title">Shortcuts</h4>
+    <h4 class="widget-title"><%= I18n.t ".SHORTCUTS" %></h4>
     <ul class="naves">
       <li>
         <i class="ti-clipboard"></i>
-        <a href="newsfeed.html" title="">News feed</a>
+        <a href="newsfeed.html" title=""> <%= I18n.t ".News_Feed" %></a>
       </li>
       <li>
         <i class="ti-mouse-alt"></i>
-        <a href="inbox.html" title="">Inbox</a>
+        <a href="inbox.html" title=""><%= I18n.t ".Inbox" %></a>
       </li>
       <li>
         <i class="ti-files"></i>
-        <a href="fav-page.html" title="">My pages</a>
+        <a href="fav-page.html" title=""><%= I18n.t ".My_Pages" %></a>
       </li>
       <li>
         <i class="ti-user"></i>
-        <a href="timeline-friends.html" title="">friends</a>
-      </li>
-      <li>
-        <i class="ti-image"></i>
-        <a href="timeline-photos.html" title="">images</a>
-      </li>
-      <li>
-        <i class="ti-video-camera"></i>
-        <a href="timeline-videos.html" title="">videos</a>
-      </li>
-      <li>
-        <i class="ti-comments-smiley"></i>
-        <a href="messages.html" title="">Messages</a>
+        <a href="timeline-friends.html" title=""><%= I18n.t ".Friends" %></a>
       </li>
       <li>
         <i class="ti-bell"></i>
-        <a href="notifications.html" title="">Notifications</a>
-      </li>
-      <li>
-        <i class="ti-share"></i>
-        <a href="people-nearby.html" title="">People Nearby</a>
-      </li>
-      <li>
-        <i class="fa fa-bar-chart-o"></i>
-        <a href="insights.html" title="">insights</a>
-      </li>
-      <li>
-        <i class="ti-power-off"></i>
-        <a href="landing.html" title="">Logout</a>
+        <a href="notifications.html" title=""><%= I18n.t ".Notifications" %></a>
       </li>
     </ul>
   </div><!-- Shortcuts -->
@@ -53,34 +29,38 @@
     <ul class="followers">
       <li>
         <figure><img src="images/resources/friend-avatar2.jpg" alt=""></figure>
+    <h4 class="widget-title"><%= I18n.t ".Who_is_following" %></h4>
+    <ul class="followers">
+      <li>
+        <figure><%= image_tag  "friend-avatar2.jpg" %></figure>
         <div class="friend-meta">
           <h4><a href="time-line.html" title="">Kelly Bill</a></h4>
           <a href="#" title="" class="underline">Add Friend</a>
         </div>
       </li>
       <li>
-        <figure><img src="images/resources/friend-avatar4.jpg" alt=""></figure>
+        <figure><%= image_tag  "friend-avatar4.jpg" %></figure>
         <div class="friend-meta">
           <h4><a href="time-line.html" title="">Issabel</a></h4>
           <a href="#" title="" class="underline">Add Friend</a>
         </div>
       </li>
       <li>
-        <figure><img src="images/resources/friend-avatar6.jpg" alt=""></figure>
+        <figure><%= image_tag  "friend-avatar6.jpg" %></figure>
         <div class="friend-meta">
           <h4><a href="time-line.html" title="">Andrew</a></h4>
           <a href="#" title="" class="underline">Add Friend</a>
         </div>
       </li>
       <li>
-        <figure><img src="images/resources/friend-avatar8.jpg" alt=""></figure>
+        <figure><%= image_tag  "friend-avatar8.jpg" %></figure>
         <div class="friend-meta">
           <h4><a href="time-line.html" title="">Sophia</a></h4>
           <a href="#" title="" class="underline">Add Friend</a>
         </div>
       </li>
       <li>
-        <figure><img src="images/resources/friend-avatar3.jpg" alt=""></figure>
+        <figure><%= image_tag  "friend-avatar3.jpg" %></figure>
         <div class="friend-meta">
           <h4><a href="time-line.html" title="">Allen</a></h4>
           <a href="#" title="" class="underline">Add Friend</a>
