--- a/app/assets/stylesheets/lib/style.scss
+++ b/app/assets/stylesheets/lib/style.scss
@@ -4723,13 +4723,16 @@ canvas {
     letter-spacing: 0.3px;
 }
 
-.top-area > ul.main-menu > li::after {
+.top-area > ul.main-menu > li::after{
     content: "";
     font-family: fontawesome;
     font-size: 13px;
     position: absolute;
     right: 10px;
     top: 0;
+}
+.top-area > ul.main-menu > li.hash-children::after{
+   content: "";
 }
 
 .top-area > ul.main-menu > li > ul li {
