--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -44,7 +44,7 @@
                   <%= I18n.t ".Friends" %>
                 </a>
                 <a class="" href="timeline-groups.html" title="" data-ripple="">
-                  <%=I18n.t ".groups" %>
+                  <%=I18n.t ".Groups" %>
                 </a>
                 <a class="" href="about.html" title="" data-ripple="">
                   <%= I18n.t ".about" %>
@@ -211,7 +211,6 @@
                                   <div class="btn btn-icon"><a href="#" title=""><i class="fa fa-pinterest"></i></a>
                                   </div>
                                   </div>
-
                                 </div>
                               </li>
                             </ul>
@@ -222,7 +221,6 @@
                   </div>
                 </div>
               </div><!-- centerl meta -->
-              <%= render "sidebars/sidebar-2" %>
             </div>
           </div>
         </div>
