--- a/app/views/posts/_edit.html.erb
+++ b/app/views/posts/_edit.html.erb
@@ -7,7 +7,7 @@
     <div class="central-meta">
       <div class="new-postbox">
         <figure>
-          <%= image_tag "admin2.jpg" %>
+          <%= image_tag @user.image.image_link.to_s if @user.image.present? %>
         </figure>
         <div class="newpst-input">
           <%= form_with model: post do |f| %>
