Create tour + Index tour

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,75 +1,4 @@
-<div class="responsive-header">
-  <div class="mh-head first Sticky">
-    <span class="mh-btns-left">
-      <a class="" href="#menu"><i class="fa fa-align-justify"></i></a>
-    </span>
-    <span class="mh-text">
-      <a href="newsfeed.html" title=""><%= image_tag "logo2.png" %></a>
-    </span>
-    <span class="mh-btns-right">
-      <a class="fa fa-sliders" href="#shoppingbag"></a>
-    </span>
-  </div>
-  <div class="mh-head second">
-    <form class="mh-form">
-      <input placeholder="search" />
-      <a href="#/" class="fa fa-search"></a>
-    </form>
-  </div>
-  <nav id="menu" class="res-menu">
-    <ul>
-      <li><span><%= I18n.t ".home" %></span>
-        <ul>
-          <li><a href="index.html" title="">Home Social</a></li>
-          <li><a href="index2.html" title="">Home Social 2</a></li>
-          <li><a href="index-company.html" title="">Home Company</a></li>
-        </ul>
-      </li>
-      <li><span><%= I18n.t ".Timeline" %></span>
-        <ul>
-          <li><a href="time-line.html" title="">timeline</a></li>
-          <li><a href="timeline-friends.html" title="">timeline friends</a></li>
-          <li><a href="timeline-pages.html" title="">timeline pages</a></li>
-          <li><a href="fav-page.html" title="">favourit page</a></li>
-          <li><a href="page-likers.html" title="">Likes page</a></li>
-        </ul>
-      </li>
-      <li><span><%= I18n.t ".Account_Settings"  %></span>
-        <ul>
-          <li><a href="create-fav-page.html" title="">create fav page</a></li>
-          <li><a href="edit-account-setting.html" title="">edit account setting</a></li>
-          <li><a href="edit-password.html" title="">edit-password</a></li>
-          <li><a href="edit-profile-basic.html" title="">edit profile basics</a></li>
-          <li><a href="inbox.html" title="">Inbox</a></li>
-          <li><a href="notifications.html" title="">notifications page</a></li>
-        </ul>
-      </li>
-      <li><span>Our Blog</span>
-        <ul>
-          <li><a href="blog-grid-wo-sidebar.html" title="">Our Blog</a></li>
-          <li><a href="blog-grid-right-sidebar.html" title="">Blog with R-Sidebar</a></li>
-          <li><a href="blog-grid-left-sidebar.html" title="">Blog with L-Sidebar</a></li>
-          <li><a href="blog-masonry.html" title="">Blog Masonry Style</a></li>
-          <li><a href="blog-list-wo-sidebar.html" title="">Blog List Style</a></li>
-          <li><a href="blog-list-right-sidebar.html" title="">Blog List with R-Sidebar</a></li>
-          <li><a href="blog-list-left-sidebar.html" title="">Blog List with L-Sidebar</a></li>
-          <li><a href="blog-detail.html" title="">Blog Post Detail</a></li>
-        </ul>
-      </li>
-      <li><span>More pages</span>
-        <ul>
-          <li><a href="careers.html" title="">Careers</a></li>
-          <li><a href="career-detail.html" title="">Career Detail</a></li>
-          <li><a href="404.html" title="">404 error page</a></li>
-          <li><a href="404-2.html" title="">404 Style2</a></li>
-        </ul>
-      </li>
-      <li><a href="about.html" title="">about</a></li>
-      <li><a href="contact-branches.html" title="">Contact Us2</a></li>
-    </ul>
-  </nav>
-</div>
-<div class="topbar stick">
+<div class="mh-head first mm-sticky mh-btns-left mh-btns-right mh-sticky">
   <div class="logo">
     <%= link_to root_url do %>
       <%= image_tag "logo.png", alt:"logo"%>
@@ -81,19 +10,19 @@
         <a href="#" title=""><%= I18n.t ".Home" %></a>
         <ul>
           <li><a href="index.html" title="">Home Social</a></li>
-          <li><a href="index2.html" title="">Home Social 2</a></li>
-          <li><a href="index-company.html" title="">Home Company</a></li>
         </ul>
       </li>
       <li>
         <a href="#" title=""><%= I18n.t ".Timeline" %></a>
         <ul>
           <li><a href="time-line.html" title="">timeline</a></li>
-          <li><a href="timeline-friends.html" title="">timeline friends</a></li>
-          <li><a href="timeline-pages.html" title="">timeline pages</a></li>
-          <li><a href="fav-page.html" title="">favourit page</a></li>
-          <li><a href="groups.html" title="">groups page</a></li>
-          <li><a href="page-likers.html" title="">Likes page</a></li>
+        </ul>
+      </li>
+      <li>
+        <%= link_to t("text.tour"), tours_path %>
+        <ul>
+          <li><a href="time-line.html" title=""></a></li>
+          <li><a href="time-line.html" title=""></a></li>
         </ul>
       </li>
       <li>
@@ -110,7 +39,9 @@
       </li>
       <% if user_signed_in? %>
         <li>
-          <%= image_tag current_user.image.image_link.to_s if current_user.image.present? %>
+          <div class="user-img">
+            <%= image_tag current_user.image.image_link.to_s if current_user.image.present? %>
+          </div>
           <ul>
             <li><%=link_to user_path(current_user) do %>
             <i class="ti-user"></i>
@@ -135,16 +66,15 @@
             </li>
           </ul>
           <%= current_user.name %>
-        </div>
-      </li>
+        </li>
       <% else %>
-      <li class="hash-children">
-        <%= link_to new_user_session_path do %>
-          <i class="ti-crown"></i>
-          <%= I18n.t ".Login" %>
-        <% end %>
+        <li class="hash-children">
+          <%= link_to new_user_session_path do %>
+            <i class="ti-crown"></i>
+            <%= I18n.t ".Login" %>
+          <% end %>
+        </li>
       <% end %>
-    </li>
     </ul>
   </div>
 </div>
