--- a/app/views/statuses/_status.html.erb
+++ b/app/views/statuses/_status.html.erb
@@ -2,21 +2,21 @@
   <div class="user-post">
     <div class="friend-info">
       <figure>
-        <%= image_tag post.user.image.image_link.to_s if post.user.image.present? %>
+        <%= image_tag status.user.image.image_link.to_s if status.user.image.present? %>
       </figure>
       <div class="top-area">
         <ul class="main-menu">
           <div class="friend-name">
-            <ins><%= link_to post.user.name, "#" %></ins>
-            <span><%= t("text.published") %>: <%= time_ago_in_words(post.created_at) %></span>
+            <ins><%= link_to status.user.name, "#" %></ins>
+            <span><%= t("text.published") %>: <%= time_ago_in_words(status.created_at) %></span>
           </div>
         </ul>
         <ul class="main-menu" >
           <li>
             <a href="#" title="Setting" data-toggle="dropdown"></a>
             <ul>
-              <li><%= link_to t("button.edit_post"), edit_post_path(post), remote: true %></li>
-              <li><%= link_to t("button.delete"), post, method: :delete, data: {confirm: t("text.confirm")} %></li>
+              <li><%= link_to t("button.edit_post"), edit_status_path(status), remote: true %></li>
+              <li><%= link_to t("button.delete"), status_path(status), method: :delete, data: {confirm: t("text.confirm")} %></li>
             </ul>
           </li>
         </ul>
@@ -24,10 +24,10 @@
       <div class="post-meta">
         <div class="description">
           <p>
-           <%= post.content %>
+           <%= status.content %>
           </p>
         </div>
-        <%= image_tag post.image.image_link.to_s if post.image.present? %>
+        <%= image_tag status.image.image_link.to_s if status.image.present? %>
         <div class="we-video-info">
           <ul>
             <li>
